src/main/java/com/example/easy_flow_backend/error/AlreadyExistsException.java
package com.example.easy_flow_backend.error;

public class AlreadyExistsException extends Exception{
}
